# cloudsync-onedrive

./: .gitignore  .pylintrc  .travis.yml  Makefile  README.md  cloudsync_onedrive.py  conftest.py  entry_points.txt  main.yml  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint-test-coverage.yml  main.yml
tests/: test_onedrive.py  test_provider.py
