[build-system]
requires = ["setuptools", "flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "cloudsync_onedrive"
author = "Atakama, LLC"
author-email = "dev-support@atakama.com"
home-page = "https://github.com/atakamallc/cloudsync-onedrive"
description-file="README.md"
# MUST be from this list: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers=["Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires = ["cloudsync~=3.0.0", "onedrivesdk_fork", "quickxorhash", "dataclasses"]
requires-python = ">=3.6"

[tool.flit.entrypoints.cloudsync.providers]
onedrive = "cloudsync_onedrive:OneDriveProvider"
